--- a/admin-login.html
+++ b/admin-login.html
@@ -6,11 +6,48 @@
   <title>Login</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" />
-  <link rel="stylesheet" href="admins.css">
+  <link rel="stylesheet" href="login.css">
  
 </head>
 <body>
   
+<!-- First Navbar -->
+<nav class="navbar navbar-light bg-white text-dark fixed-top first-navbar">
+  <img src="educap.jfif" alt="Education Cap" class="circular-img fixed-left-img">
+  <span class="navbar-brand mx-auto text-dark">Imam&nbsp;&nbsp;Hafsin</span>
+  <img src="logo.jpg" alt="Professor" class="circular-img fixed-right-img">
+</nav>
+
+<!-- Second Navbar -->
+<nav class="navbar navbar-expand-lg navbar-dark bg-light text-dark second-navbar">
+  <button class="navbar-toggler" type="button" onclick="toggleNavbar()">
+      <span class="navbar-toggler-icon"></span>
+  </button>
+  <button class="cancel-btn" style="display:none;" onclick="toggleNavbar()">×</button>
+  <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
+      <ul class="navbar-nav">
+          <li class="nav-item">
+              <a class="nav-link text-danger" href="index.html">Home</a>
+          </li>
+          <li class="nav-item">
+              <a class="nav-link text-danger" href="about.html">About</a>
+          </li>
+          <li class="nav-item dropdown">
+              <a class="nav-link text-danger dropdown-toggle" href="#" id="loginDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false" style="padding-right: 0;">
+                Login
+              </a>
+              <ul class="dropdown-menu" aria-labelledby="loginDropdown">
+                <li><a class="dropdown-item" href="admin-login.html">As Admin</a></li>
+                <li><a class="dropdown-item" href="login.html"> As Staff</a></li>
+                <li><a class="dropdown-item" href="#studentLogin.html"> As Student</a></li>
+              </ul>
+          </li>
+          <li class="nav-item">
+              <a class="nav-link text-danger" href="contact.html">Contact</a>
+          </li>
+      </ul>
+  </div>
+</nav>
   <div class="container">
     <form action="/adminLogin" method="POST" class="border p-4 shadow-sm rounded">
       <div class="card-header text-center">
@@ -33,9 +70,37 @@
 </div>
 </div>
 </div>
-
-<br><br>
-
+ <!-- Footer -->
+ <div class="footer bg-light mt-5">
+  <div class="row text-center py-3">
+    <div class="col-md-4">
+      <p><strong>Imam Hafsin Model International School</strong></p>
+      <p>622, Yakasai Street, Tal'udu G/Kaya</p>
+      <p>Email: imamhafsin@gmail.com</p>
+      <p>Phone: 08030999939939399</p>
+    </div>
+    <div class="col-md-4">
+      <a href="https://www.facebook.com/prof.johndoe" target="_blank" class="d-block mb-2">
+        <i class="fab fa-facebook"></i> Facebook
+      </a>
+      <a href="https://www.instagram.com/prof.johndoe" target="_blank" class="d-block mb-2">
+        <i class="fab fa-instagram"></i> Instagram
+      </a>
+      <a href="https://twitter.com/prof_johndoe" target="_blank" class="d-block mb-2">
+        <i class="fab fa-twitter"></i> Twitter
+      </a>
+      <a href="https://wa.me/1234567890" target="_blank" class="d-block mb-2">
+        <i class="fab fa-whatsapp"></i> WhatsApp
+      </a>
+    </div>
+    <div class="col-md-4">
+      <p>&copy; IHMIS 2024</p>
+      <p>All rights reserved.</p>
+    </div>
+  </div>
+</div>
+<!-- Back to top button -->
+<button onclick="topFunction()" id="myBtn" title="Go to top"><i class="fas fa-arrow-up"></i></button>
 
    <!-- Bootstrap JS, Popper.js, and jQuery -->
    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
