--- a/password_reset.html
+++ b/password_reset.html
@@ -52,31 +52,41 @@
   <!-- Main content container -->
   <div class="content">
     <div class="container">
-      <!-- Forgot Password Form -->
-      <form id="forgotPasswordForm" action="/forgot-password" method="POST" class="border p-4 shadow-sm rounded">
-        <h2 class="text-center mb-4">Forgot Password</h2>
-        <div class="form-group">
-          <input type="text" name="identifier" class="form-control" placeholder="Enter your email or staff ID" required>
-        </div>
-        <button type="submit" class="btn btn-success btn-block">Submit</button>
-      </form>
+     <!-- Forgot Password Form -->
+<form id="forgotPasswordForm" action="/forgot-password" method="POST" class="border p-4 shadow-sm rounded">
+  <h2 class="text-center mb-4">Forgot Password</h2>
+  <div class="form-group">
+    <input type="text" name="identifier" class="form-control" placeholder="Enter your email or staff ID" required>
+  </div>
+  <button type="submit" class="btn btn-success btn-block">Submit</button>
+</form>
 
-      <!-- Reset Password Form (Initially hidden, shown when the identifier is valid) -->
-      <form id="resetPasswordForm" action="/reset-password" method="POST" class="border p-4 shadow-sm rounded" style="display:none;">
-        <h2 class="text-center mb-4">Reset Password</h2>
-        <input type="hidden" name="identifier" id="resetIdentifier">
-        <div class="form-group">
-          <input type="password" name="newPassword" class="form-control" placeholder="New Password" required>
-        </div>
-        <div class="form-group">
-          <input type="password" name="confirmPassword" class="form-control" placeholder="Confirm New Password" required>
-        </div>
-        <button type="submit" class="btn btn-warning btn-block">Reset Password</button>
-      </form>
+<!-- Security Question Form (Initially hidden, shown when identifier is valid) -->
+<form id="securityQuestionForm" action="/security-question" method="POST" class="border p-4 shadow-sm rounded" style="display:none;">
+  <h2 class="text-center mb-4">Answer Security Question</h2>
+  <div class="form-group">
+    <label id="securityQuestionLabel"></label>
+    <input type="text" name="securityAnswer" class="form-control" placeholder="Enter your answer" required>
+  </div>
+  <button type="submit" class="btn btn-info btn-block">Submit Answer</button>
+</form>
 
-      <!-- Messages Section -->
-      <div id="message" class="alert alert-info mt-3 text-center" style="display:none;"></div>
-    </div>
+<!-- Reset Password Form (Initially hidden, shown when the answer is correct) -->
+<form id="resetPasswordForm" action="/reset-password" method="POST" class="border p-4 shadow-sm rounded" style="display:none;">
+  <h2 class="text-center mb-4">Reset Password</h2>
+  <input type="hidden" name="identifier" id="resetIdentifier">
+  <div class="form-group">
+    <input type="password" name="newPassword" class="form-control" placeholder="New Password" required>
+  </div>
+  <div class="form-group">
+    <input type="password" name="confirmPassword" class="form-control" placeholder="Confirm New Password" required>
+  </div>
+  <button type="submit" class="btn btn-warning btn-block">Reset Password</button>
+</form>
+
+<!-- Messages Section -->
+<div id="message" class="alert alert-info mt-3 text-center" style="display:none;"></div>
+
   </div>
 
   <!-- Footer -->
