--- a/signup.html
+++ b/signup.html
@@ -331,9 +331,24 @@
     </select>
     <!-- Additional Specification Field -->
     <!-- Input field for other qualification -->
-   
 </div>
-
+<div class="form-row">
+    <div class="form-group col-md-6">
+        <label for="security_question">Security Question:</label>
+        <select class="form-control" id="security_question" name="security_question" required>
+            <option value="">Select a security question</option>
+            <option value="What is your mother's maiden name?">What is your mother's maiden name?</option>
+            <option value="What was the name of your first pet?">What was the name of your first pet?</option>
+            <option value="What was the name of your first school?">What was the name of your first school?</option>
+            <option value="Who was your favorite teacher?">Who was your favorite teacher?</option>
+        </select>
+    </div>
+     <div class="form-group col-md-6">
+        <label for="security_answer">Security Answer:</label>
+        <input type="text" class="form-control" id="security_answer" name="security_answer" required>
+    
+</div>
+</div>     
                             <!-- Profile Picture Upload -->
                             <div class="mb-3">
                                 <label for="profilePicture" class="form-label">Profile Picture</label>
