--- a/index.html
+++ b/index.html
@@ -2,105 +2,173 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Imam Hafsin Model International School</title>
-    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet">
-    <style>
-        body {
-            font-family: 'Roboto', sans-serif;
-        }
-        .hero {
-            background: url('school-background.jpg') no-repeat center center;
-            background-size: cover;
-            height: 100vh;
-            display: flex;
-            align-items: center;
-            color: white;
-        }
-        .navbar {
-            background-color: rgba(0, 0, 0, 0.8);
-        }
-        .footer {
-            background-color: #343a40;
-            color: white;
-            padding: 20px 0;
-            text-align: center;
-        }
-    </style>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title> imam Hafsin Model International School</title>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" />
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="style.css"> 
+</head>
 </head>
 <body>
-
-    <nav class="navbar navbar-expand-lg navbar-dark">
-        <a class="navbar-brand" href="#">Imam Hafsin School</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav ml-auto">
-                <li class="nav-item">
-                    <a class="nav-link" href="#about">About</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#programs">Programs</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#contact">Contact</a>
-                </li>
-            </ul>
+  
+<!-- First Navbar -->
+<nav class="navbar navbar-light bg-white text-dark fixed-top first-navbar">
+    <img src="educap.jfif" alt="Education Cap" class="circular-img fixed-left-img">
+    <span class="navbar-brand mx-auto text-dark">Imam&nbsp;&nbsp;Hafsin</span>
+    <img src="logo.jpg" alt="Professor" class="circular-img fixed-right-img">
+  </nav>
+  
+  <!-- Second Navbar -->
+  <nav class="navbar navbar-expand-lg navbar-dark bg-light text-dark second-navbar">
+    <button class="navbar-toggler" type="button" onclick="toggleNavbar()">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+    <button class="cancel-btn" style="display:none;" onclick="toggleNavbar()">×</button>
+    <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
+        <ul class="navbar-nav">
+            <li class="nav-item">
+                <a class="nav-link text-danger" href="index.html">Home</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link text-danger" href="about.html">About</a>
+            </li>
+            <li class="nav-item dropdown">
+                <a class="nav-link text-danger dropdown-toggle" href="#" id="loginDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false" style="padding-right: 0;">
+                  Login
+                </a>
+                <ul class="dropdown-menu" aria-labelledby="loginDropdown">
+                  <li><a class="dropdown-item" href="admin-login.html">As Admin</a></li>
+                  <li><a class="dropdown-item" href="login.html"> As Staff</a></li>
+                  <li><a class="dropdown-item" href="#studentLogin.html"> As Student</a></li>
+                </ul>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link text-danger" href="contact.html">Contact</a>
+            </li>
+        </ul>
+    </div>
+  </nav>
+   
+<!-- Carousel -->
+<div id="schoolCarousel" class="carousel slide mt-auto" data-bs-ride="carousel" data-bs-interval="8000">
+    <div class="carousel-inner">
+        <!-- First Slide with Brief Introduction -->
+        <div class="carousel-item active">
+            <img src="students.jfif" class="d-block w-100" alt="School Image 1">
+            <div class="carousel-caption d-flex flex-column justify-content-center align-items-center bg-transparent">
+                <h5 class="text-info">Welcome to Imam Hafsin Model International School</h5>
+                <p class="text-light bg-transparent px-3 py-2">
+                    Imam Hafsin Model International School provides quality education across three distinct sections: Western Education, Islamiyya, and Tahfizz. 
+                    With dedicated directors leading each section, our mission is to nurture future leaders through a blend of modern and traditional learning.
+                </p>
+            </div>
         </div>
-    </nav>
+        <!-- Second Slide for Western Education -->
+        <div class="carousel-item">
+            <img src="students.jfif" class="d-block w-100" alt="Western Education Image">
+            <div class="carousel-caption d-flex flex-column justify-content-center align-items-center bg-transparent">
+                <h5 class="text-info">Western Education Section</h5>
+                <p class="text-light bg-transparent px-3 py-2">
+                    Empowering students with modern education and life skills under the guidance of Mrs. Amina.
+                </p>
+            </div>
+        </div>
+        <!-- Third Slide for Islamiyya -->
+        <div class="carousel-item">
+            <img src="team.jfif" class="d-block w-100" alt="School Image 2">
+            <div class="carousel-caption d-flex flex-column justify-content-center align-items-center bg-transparent">
+                <h5 class="text-info">Islamiyya Section</h5>
+                <p class="text-light bg-transparent px-3 py-2">
+                    Building a strong foundation in Islamic studies under the guidance of Mal. Usman.
+                </p>
+            </div>
+        </div>
+        <!-- Fourth Slide for Tahfizz -->
+        <div class="carousel-item">
+            <img src="students.jfif" class="d-block w-100" alt="School Image 3">
+            <div class="carousel-caption d-flex flex-column justify-content-center align-items-center bg-transparent">
+                <h5 class="text-info">Tahfizz Section</h5>
+                <p class="text-light bg-transparent px-3 py-2">
+                    Focusing on the memorization of the Holy Quran with leadership from Mal. Salihu.
+                </p>
+            </div>
+        </div>
+    </div>
+</div>
 
-    <div class="hero">
-        <div class="container text-center">
-            <h1>Welcome to Imam Hafsin Model International School</h1>
-            <p>Your future begins here.</p>
-            <a href="#contact" class="btn btn-primary btn-lg">Get In Touch</a>
+
+
+    <!-- Directors Section -->
+    <div class="director-container mt-5">
+        <h3 class="text-center text-info bg-light">Meet Our Directors</h3>
+        <div class="row text-center">
+            <div class="col-md-4">
+                <img src="director1.jpg" alt="Mr. Auwal Muhammad" class="director-img">
+                <h5>Mr. Auwal Muhammad</h5>
+                <p>Director, Western Education Section</p>
+            </div>
+            <div class="col-md-4">
+                <img src="director2.jpg" alt="Mal. Usman" class="director-img">
+                <h5>Mal. Usman</h5>
+                <p>Director, Islamiyya Section</p>
+            </div>
+            <div class="col-md-4">
+                <img src="director3.jpg" alt="Mal. Salihu" class="director-img">
+                <h5>Mal. Salihu</h5>
+                <p>Director, Tahfizz Section</p>
+            </div>
         </div>
     </div>
 
-    <section id="about" class="py-5">
-        <div class="container text-center">
-            <h2>About Us</h2>
-            <p>Imam Hafsin Model International School is committed to providing quality education...</p>
-        </div>
-    </section>
+    <!-- News and Feeds -->
+    <div class="news-section mt-5">
+        <h3 class="text-center text-info bg-light ">News and Feeds</h3>
+        <ul>
+            <li>Upcoming PTA meeting scheduled for December 15th.</li>
+            <li>Congratulations to our Tahfizz students on completing their Quran memorization.</li>
+            <li>Western Education Section announces the opening of new science labs.</li>
+        </ul>
+    </div>
 
-    <section id="programs" class="py-5 bg-light">
-        <div class="container text-center">
-            <h2>Our Programs</h2>
-            <div class="row">
-                <div class="col-md-4">
-                    <h4>Primary Education</h4>
-                    <p>Focused on foundational skills and knowledge.</p>
-                </div>
-                <div class="col-md-4">
-                    <h4>Secondary Education</h4>
-                    <p>Preparing students for higher education and life skills.</p>
-                </div>
-                <div class="col-md-4">
-                    <h4>Extracurricular Activities</h4>
-                    <p>Enhancing skills beyond the classroom.</p>
-                </div>
+    <!-- Footer -->
+    <div class="footer bg-light mt-5">
+        <div class="row text-center py-3">
+            <div class="col-md-4">
+                <p><strong>Imam Hafsin Model International School</strong></p>
+                <p>622, Yakasai Street, Tal'udu G/Kaya</p>
+                <p>Email: imamhafsin@gmail.com</p>
+                <p>Phone: 08030999939939399</p>
+            </div>
+            <div class="col-md-4">
+                <a href="https://www.facebook.com/prof.johndoe" target="_blank" class="d-block mb-2">
+                    <i class="fab fa-facebook"></i> Facebook
+                </a>
+                <a href="https://www.instagram.com/prof.johndoe" target="_blank" class="d-block mb-2">
+                    <i class="fab fa-instagram"></i> Instagram
+                </a>
+                <a href="https://twitter.com/prof_johndoe" target="_blank" class="d-block mb-2">
+                    <i class="fab fa-twitter"></i> Twitter
+                </a>
+                <a href="https://wa.me/1234567890" target="_blank" class="d-block mb-2">
+                    <i class="fab fa-whatsapp"></i> WhatsApp
+                </a>
+            </div>
+            <div class="col-md-4">
+                <p>&copy; IHMIS 2024</p>
+                <p>All rights reserved.</p>
             </div>
         </div>
-    </section>
+    </div>
+<!-- Back to top button -->
+<button onclick="topFunction()" id="myBtn" title="Go to top"><i class="fas fa-arrow-up"></i></button>
 
-    <section id="contact" class="py-5">
-        <div class="container text-center">
-            <h2>Contact Us</h2>
-            <p>Email: info@ihms.edu | Phone: (123) 456-7890</p>
-        </div>
-    </section>
+<!-- Scripts -->
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+<script src="login.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/js/bootstrap.bundle.min.js"></script>
 
-    <footer class="footer">
-        <div class="container">
-            <p>© 2024 Imam Hafsin Model International School. All rights reserved.</p>
-        </div>
-    </footer>
-
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
 </html>
