--- a/admin-login.html
+++ b/admin-login.html
@@ -37,9 +37,9 @@
                 Login
               </a>
               <ul class="dropdown-menu" aria-labelledby="loginDropdown">
-                <li><a class="dropdown-item" href="admin-login.html">As Admin</a></li>
-                <li><a class="dropdown-item" href="login.html"> As Staff</a></li>
-                <li><a class="dropdown-item" href="#studentLogin.html"> As Student</a></li>
+                <li><a class="dropdown-item" href="admin-login.html">Admin</a></li>
+                <li><a class="dropdown-item" href="login.html">Staff</a></li>
+                <li><a class="dropdown-item" href="#studentLogin.html">Student</a></li>
               </ul>
           </li>
           <li class="nav-item">
@@ -49,7 +49,7 @@
   </div>
 </nav>
   <div class="container">
-    <form action="/adminLogin" method="POST" class="border p-4 shadow-sm rounded ">
+    <form action="/adminLogin" method="POST" class="border p-4 shadow-sm rounded">
       <div class="card-header text-center">
         Admin Login
       </div>
