--- a/index.html
+++ b/index.html
@@ -104,17 +104,17 @@
         <h3 class="text-center text-info bg-light">Meet Our Directors</h3>
         <div class="row text-center">
             <div class="col-md-4">
-                <img src="director1.jpg" alt="Mr. Auwal Muhammad" class="director-img">
+                <img src="auwal1.jfif" alt="Mr. Auwal Muhammad" class="director-img">
                 <h5>Mr. Auwal Muhammad</h5>
                 <p>Director, Western Education Section</p>
             </div>
             <div class="col-md-4">
-                <img src="director2.jpg" alt="Mal. Usman" class="director-img">
+                <img src="shamsu.jpg" alt="Mal. Usman" class="director-img">
                 <h5>Mal. Usman</h5>
                 <p>Director, Islamiyya Section</p>
             </div>
             <div class="col-md-4">
-                <img src="director3.jpg" alt="Mal. Salihu" class="director-img">
+                <img src="passport.jpg" alt="Mal. Salihu" class="director-img">
                 <h5>Mal. Salihu</h5>
                 <p>Director, Tahfizz Section</p>
             </div>
